--- a/config/locales/devise.ja.yml
+++ b/config/locales/devise.ja.yml
@@ -10,6 +10,11 @@ ja:
         current_sign_in_at: 現在のログイン時刻
         current_sign_in_ip: 現在のログインIPアドレス
         email: Eメール
+        last_name: 姓
+        first_name: 名
+        address: 住所
+        phone_number: 電話番号
+        postal_code: 郵便番号
         encrypted_password: 暗号化パスワード
         failed_attempts: 失敗したログイン試行回数
         last_sign_in_at: 最終ログイン時刻
